# adversary-agent

./: .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  make.ps1  pyproject.toml  requirements.txt
adversary/: __init__.py  config.py  orchestrator.py  phoenix_mcp.py  scorecard.py  telemetry.py
adversary/agents/: __init__.py  _prompt_loader.py  analyst.py  attacker.py  reporter.py  strategist.py
adversary/attacks/: __init__.py  base.py  direct_jailbreak.py  indirect_injection.py  system_prompt_leak.py  tool_abuse.py
adversary/evals/: __init__.py  judges.py  phoenix_log.py
adversary/prompts/: analyst.md  attacker.md  reporter.md  strategist.md
api/: __init__.py  demo_replay.json  events.py  main.py  replay.py
deploy/: Dockerfile  deploy.ps1  deploy.sh  service.yaml
docs/: GAP-CLOSURE-PLAN.md  architecture.md  arize-methodology.md  threat-model.md
docs/images/: architecture.mmd
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/components/: CampaignTree.tsx  RegressionPanel.tsx  Scorecard.tsx  TracePane.tsx
scripts/: __init__.py  _check_lengths.py  export_mermaid.ps1  export_mermaid.sh  run_campaign.py  seed_phoenix.py
tests/: conftest.py  test_loop.py
