[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversary"
version = "0.1.0"
description = "A self-improving AI red-team agent that attacks tool-using agents at the tool/action layer and learns from its own Arize Phoenix traces."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Prajwal Sutar" }]
keywords = ["ai", "red-team", "security", "agents", "arize", "phoenix", "gemini", "adk"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["adversary*", "target*", "api*"]
exclude = ["tests*", "frontend*", "deploy*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
